--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <!-- Apache Common-->
+        <!-- GSON DEPENDENCY-->
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
