--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <artifactId>gson</artifactId>
             <version>2.5</version>
         </dependency>
+
+        <!-- Freemarker DEPENDENCY -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.20</version>
+        </dependency>
     </dependencies>
 
     <build>
