--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,14 @@
             <artifactId>jetty-webapp</artifactId>
             <version>${jetty.version}</version>
         </dependency>
-        <!-- JUNIT DEPENDENCY FOR TESTING -->
+        <!-- JUNIT DEPENDENCY For Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <!-- JWebUnit DEPENDENCY-->
+        <!-- JWebUnit DEPENDENCY For Testing -->
         <dependency>
             <groupId>net.sourceforge.jwebunit</groupId>
             <artifactId>jwebunit-htmlunit-plugin</artifactId>
@@ -61,6 +61,14 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
         </dependency>
+
+        <!-- Apache Common Fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
